Implement Midtrans payment integration and update order/payment status handling
- Updated pom.xml to use the latest Midtrans Java library.
- Refactored MidtransConfig to include production flag.
- Added webhook endpoint in PaymentController to handle Midtrans notifications.
- Enhanced OrderServiceImpl to create Midtrans transactions and update order statuses based on payment notifications.
- Introduced enums for OrderStatus and PaymentStatus to manage order and payment states.
- Updated PaymentServiceImpl to process notifications from Midtrans and update order statuses accordingly.
- Modified DTOs to include new fields for payment and order statuses.